<resources>
    <string name="app_name">My Application</string>
    <string name="app_logo">App Logo\n</string>
    <string name="loading_animation">Loading Animation</string>
    <string name="welcome_to_lostnfound">Welcome to Lost &amp; Found</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_hint">Email</string>
    <string name="email_or_username_hint">Email/Username</string>
    <string name="password_hint">Password</string>
    <string name="login_success">Login Successful</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="username_hint">Username</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="logo_description">Lost &amp; Found Logo</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="profile">Profile</string>
    <string name="profile_description">User Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="username">Username</string>
    <string name="email_placeholder">user@example.com</string>
    <string name="phone_placeholder">+1 (555) 123-4567</string>
    <string name="location_icon_description">Location icon</string>
    <string name="date_icon_description">Date icon</string>
    <string name="found_text">FOUND</string>
    <string name="listed_items">Listed Items</string>
    <string name="logout_button">Logout</string>
    <string name="join_date">Joined Date</string>
    <string name="settings">Settings</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="user_fullname">Full Name</string>
    <string name="date_of_birth_hint">Date of Birth</string>
    <string name="change_password">Change Password</string>
    <string name="back_button">Back</string>
    <string name="item_title_hint">Item Title</string>
    <string name="item_description_hint">Item Description</string>
    <string name="item_category_hint">Item Category</string>
    <string name="item_location_hint">Item Location</string>
    <string name="item_image_hint">Item Image</string>
    <string name="post_item_button">Post Item</string>
    <string name="cancel_button">Cancel</string>
    <string name="home">Home</string>
    <string name="lost">Lost</string>
    <string name="returned_items">Returned Items</string>
    <string name="results_count">%d items found</string>


    <!-- String arrays for PostItemFragment -->
    <string-array name="cambodia_provinces">
        <item>Phnom Penh</item>
        <item>Banteay Meanchey</item>
        <item>Battambang</item>
        <item>Kampong Cham</item>
        <item>Kampong Chhnang</item>
        <item>Kampong Speu</item>
        <item>Kampong Thom</item>
        <item>Kampot</item>
        <item>Kandal</item>
        <item>Kep</item>
        <item>Koh Kong</item>
        <item>Kratie</item>
        <item>Mondulkiri</item>
        <item>Oddar Meanchey</item>
        <item>Pailin</item>
        <item>Preah Vihear</item>
        <item>Prey Veng</item>
        <item>Pursat</item>
        <item>Ratanakiri</item>
        <item>Siem Reap</item>
        <item>Preah Sihanouk</item>
        <item>Stung Treng</item>
        <item>Svay Rieng</item>
        <item>Takeo</item>
        <item>Tboung Khmum</item>
    </string-array>

    <string-array name="lost_or_found">
        <item>Lost</item>
        <item>Found</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_title">Fragment Title</string>
    <string name="fob_add">FOB Add</string>
    <string name="lost_or_found">Lost or Found?</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="posted_date">Posted Date</string>
    <string name="view_details">View Details</string>
    <string name="found_date">Found Date</string>


</resources>