<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/item_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="centerCrop"
        app:layout_constraintCircleRadius="10dp"
        app:shapeAppearanceOverlay="@style/DefaultItemImageview"
        android:contentDescription="@string/item_description_hint"
        android:src="@drawable/sample_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Title Label -->
    <TextView
        android:id="@+id/title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_title_hint"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/item_image"
        app:layout_constraintTop_toTopOf="parent"
        />


    <!-- Location Label -->
    <TextView
        android:id="@+id/location_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/item_location_hint"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/item_image"
        app:layout_constraintTop_toBottomOf="@id/title_textview" />


    <!-- Date Label -->
    <TextView
        android:id="@+id/date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/posted_date"
        android:layout_marginStart="5dp"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/item_image"
        app:layout_constraintTop_toBottomOf="@id/location_textview" />


    <!-- Details Button -->
    <Button
        android:id="@+id/btn_view_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>