<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_background_app_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.ProfileFragment"
    android:id="@+id/profile_fragment">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@color/my_profile_cardview"
        app:cardCornerRadius="24dp"
        app:cardElevation="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_image_view"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/profile_description"
            android:scaleType="fitCenter"
            android:src="@drawable/sample_profile"
            app:shapeAppearanceOverlay="@style/RoundImageView"
            app:layout_constraintTop_toTopOf="@id/profile_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_profile_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/edit_profile"
                app:icon="@drawable/ic_settings"
                app:iconGravity="textEnd"
                app:iconTint="@color/my_default_color"
                app:shapeAppearanceOverlay="@style/Widget.MaterialComponents.Button.Icon"
                app:layout_constraintTop_toTopOf="@id/profile_layout"
                app:layout_constraintEnd_toEndOf="@id/profile_layout" />


            <TextView
                android:id="@+id/profile_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="#004450"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/profile_image_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/user_email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_placeholder"
                android:textColor="#666666"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/profile_username"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/user_phone_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_placeholder"
                android:textColor="#666666"
                android:textSize="16sp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/user_email_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/joined_date_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_date"
                android:textColor="#a6a6a6"
                android:textSize="14sp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/user_phone_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/listed_item_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="#00ADCC"
                android:text="@string/listed_items"
                android:textColor="#ffffff"
                app:cornerRadius="16dp"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                app:iconTint="@color/white"
                app:layout_constraintTop_toBottomOf="@id/joined_date_textview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logout_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:backgroundTint="#f5f5dc"
                android:text="@string/logout_button"
                android:textColor="#ff0000"
                app:cornerRadius="16dp"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                app:iconTint="@color/white"
                app:strokeColor="#ff0000"
                app:strokeWidth="2dp"
                app:layout_constraintTop_toBottomOf="@id/listed_item_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:backgroundTint="#00ADCC"
                android:text="@string/login_button"
                android:textColor="#ffffff"
                app:cornerRadius="16dp"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                app:iconTint="@color/white"
                app:layout_constraintTop_toBottomOf="@id/logout_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>