<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#004450"
    tools:context=".ui.login.LoginFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/login_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#005464"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        app:cardCornerRadius="24dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:cardPreventCornerOverlap="false"
        app:cardMaxElevation="12dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp">

            <TextView
                android:id="@+id/welcome_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_lostnfound"
                android:textColor="#FFFFFF"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="24dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/email_hint"
                android:textColorHint="#B4c8d2"
                app:layout_constraintTop_toBottomOf="@+id/welcome_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_or_username_hint"
                        android:textColorHint="#B4c8d2"
                    app:boxStrokeColor="@color/my_default_color"
                    app:cursorColor="@color/my_default_color"
                    app:hintTextColor="@color/my_default_color"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/password_hint"
                android:textColorHint="#B4c8d2"
                app:layout_constraintTop_toBottomOf="@+id/email_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password_hint"
                    android:textColorHint="#B4c8d2"
                    app:boxStrokeColor="@color/my_default_color"
                    app:cursorColor="@color/my_default_color"
                    app:hintTextColor="@color/my_default_color"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_button"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/password_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:backgroundTint="@color/my_default_color"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@+id/login_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/dont_have_account_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_account"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/sign_up_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="#00adcc"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>