<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_background_app_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile_settings.ProfileSettingsFragment"
    android:id="@+id/profile_settings_fragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_settings_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="#f5f5dc"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_settings_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp">

            <TextView
                android:id="@+id/profile_settings_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:text="@string/profile_settings"
                android:textColor="#004450"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/username_hint"
                android:textColorHint="#B4c8d2"
                app:boxStrokeColor="@color/my_default_color"
                app:cursorColor="@color/my_default_color"
                app:hintTextColor="@color/my_default_color"
                app:layout_constraintTop_toBottomOf="@id/profile_settings_text">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_fullname_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/user_fullname"
                android:textColorHint="#B4c8d2"
                app:boxStrokeColor="@color/my_default_color"
                app:cursorColor="@color/my_default_color"
                app:hintTextColor="@color/my_default_color"
                app:layout_constraintTop_toBottomOf="@+id/username_input"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/date_of_birth_hint"
                android:textColorHint="#B4c8d2"
                app:boxStrokeColor="@color/my_default_color"
                app:cursorColor="@color/my_default_color"
                app:hintTextColor="@color/my_default_color"
                app:layout_constraintTop_toBottomOf="@+id/user_fullname_input">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/email_hint"
                android:textColorHint="#B4c8d2"
                app:boxStrokeColor="@color/my_default_color"
                app:cursorColor="@color/my_default_color"
                app:hintTextColor="@color/my_default_color"
                app:layout_constraintTop_toBottomOf="@+id/date_input">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/password_hint"
                android:textColorHint="#B4c8d2"
                app:boxStrokeColor="@color/my_default_color"
                app:cursorColor="@color/my_default_color"
                app:hintTextColor="@color/my_default_color"
                app:endIconMode="password_toggle"
                app:layout_constraintTop_toBottomOf="@+id/email_input">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="textPassword"
                    android:text="@string/password_hint"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/change_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:textColor="#00adcc"
                android:textSize="14sp"
                android:textStyle="bold"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/password_input"
                app:layout_constraintStart_toStartOf="parent"
                />




            <com.google.android.material.button.MaterialButton
                android:id="@+id/back_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:backgroundTint="#f5f5dc"
                android:text="@string/back_button"
                android:textColor="@color/my_default_color"
                app:cornerRadius="16dp"
                app:iconGravity="textStart"
                app:iconPadding="8dp"
                app:iconTint="@color/white"
                app:strokeColor="@color/my_default_color"
                app:strokeWidth="2dp"
                app:layout_constraintTop_toBottomOf="@+id/change_password_text"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>